app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #FDFAF6;
  /* Cream 50 */
  --foreground: #2C2C2C;
  /* Dark Charcoal */
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #1a1a1a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: var(--font-geist-sans), Arial, Helvetica, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-playfair), serif;
}

